fixed spacing issues

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -14,8 +14,7 @@
       opacity: 0.9;
       @include small-screen {
         position: relative;
-        bottom: 0;
-
+        bottom: 5rem;
         opacity: 1;
       }
     }
