--- a/styles/hero/hero.module.scss
+++ b/styles/hero/hero.module.scss
@@ -24,7 +24,7 @@
       font-size: 2.4rem;
       width: 100%;
       line-height: 25px;
-      margin-bottom: 20rem;
+      margin-bottom: 15rem;
       padding: 0rem 3rem;
     }
   }
@@ -146,7 +146,7 @@
             margin-right: 2.5rem;
 
             @include small-screen {
-              height: 5rem;
+              // height: 5rem;
               margin-right: 1.5rem;
             }
           }
